# CPP-OpenGL

./: README.md
Linux/: CMakeLists.txt  README.md
Linux-aarch64/: CMakeLists.txt  README.md
Linux-aarch64/shaders/: vertex_core.glsl
Linux-aarch64/src/: main.cpp
Linux/mesh/: mesh.cpp
Linux/src/: main.cpp
MacOS/: CMakeLists.txt
MacOS/shaders/: shader.h
MacOS/src/: glad.cpp  main.cpp
MacOS/window/: window.cpp
Unix/: CMakeLists.txt  README.md  build.sh
Unix/dependencies/include/glad/: glad.h
Unix/mesh/: mesh.cpp  mesh.h  vertices.h
Unix/shaders/: fragment_core.glsl  shader.cpp
Unix/src/: main.cpp
Unix/window/: window.cpp  window.h
